fix: align detail header with grid headers
This is a different approach to the change made in ebf5ea13bc450633a4d620e23fcacb9edcb2b367 .
This approach better reflects the manner in which padding/margins is handled
in the Ext JS grid headers.

--- a/sencha-workspace/SlateTasksManager/sass/src/view/TaskDetails.scss
+++ b/sencha-workspace/SlateTasksManager/sass/src/view/TaskDetails.scss
@@ -2,7 +2,6 @@
     border-color: $grid-header-border-color;
     border-width: 0 0 1px;
 
-
     h4 {
         margin: .25em 0;
     }
@@ -10,10 +9,13 @@
     .x-panel-header {
         background-color: $grid-header-background-color;
 
-        padding: 3px 16px 3px !important;
-
         .x-title {
             color: $grid-column-header-color;
+
+            .x-title-text {
+                text-align: center;
+                padding: 0;
+            }
         }
     }
 
